<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SSHDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ready">Ready!</string>
    <string name="connecting">Connecting…</string>
    <string name="host">Host</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="command">Command</string>
    <string name="execute">Execute Command</string>

</resources>
